# TestCMakeCI

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
client/: CMakeLists.txt
client/test/: CMakeLists.txt
